@@ -1,22 +1,22 @@
-RIDE_TYPE_HYPERCOASTER: (843, 766, 346)
-RIDE_TYPE_WOODEN_ROLLER_COASTER: (639, 1011, 626)
-RIDE_TYPE_WOODEN_ROLLER_COASTER: (702, 734, 428)
+RIDE_TYPE_HYPERCOASTER: (840, 766, 346)
+RIDE_TYPE_WOODEN_ROLLER_COASTER: (643, 1011, 626)
+RIDE_TYPE_WOODEN_ROLLER_COASTER: (700, 734, 428)
 RIDE_TYPE_MINIATURE_RAILWAY: (465, 37, 27)
 RIDE_TYPE_LOG_FLUME: (522, 199, 107)
-RIDE_TYPE_BOBSLEIGH_COASTER: (559, 548, 440)
-RIDE_TYPE_CORKSCREW_ROLLER_COASTER: (504, 533, 204)
-RIDE_TYPE_CAR_RIDE: (418, 58, 3)
-RIDE_TYPE_WOODEN_WILD_MOUSE: (324, 381, 220)
+RIDE_TYPE_BOBSLEIGH_COASTER: (555, 548, 440)
+RIDE_TYPE_CORKSCREW_ROLLER_COASTER: (501, 533, 204)
+RIDE_TYPE_CAR_RIDE: (410, 58, 3)
+RIDE_TYPE_WOODEN_WILD_MOUSE: (323, 381, 220)
 RIDE_TYPE_LOG_FLUME: (208, 69, 52)
 RIDE_TYPE_3D_CINEMA: (350, 240, 140)
 RIDE_TYPE_HAUNTED_HOUSE: (341, 153, 10)
-RIDE_TYPE_MONORAIL: (439, 25, 5)
+RIDE_TYPE_MONORAIL: (434, 25, 5)
 RIDE_TYPE_MINI_GOLF: (306, 90, 0)
-RIDE_TYPE_WOODEN_ROLLER_COASTER: (636, 648, 377)
+RIDE_TYPE_WOODEN_ROLLER_COASTER: (634, 648, 377)
 RIDE_TYPE_WOODEN_ROLLER_COASTER: (71, 68, 41)
-RIDE_TYPE_STEEPLECHASE: (607, 509, 351)
-RIDE_TYPE_STEEPLECHASE: (590, 492, 338)
-RIDE_TYPE_CLASSIC_MINI_ROLLER_COASTER: (488, 460, 331)
+RIDE_TYPE_STEEPLECHASE: (609, 509, 351)
+RIDE_TYPE_STEEPLECHASE: (587, 492, 338)
+RIDE_TYPE_CLASSIC_MINI_ROLLER_COASTER: (489, 460, 331)
 RIDE_TYPE_SHOP: (-1, 0, 0)
 RIDE_TYPE_INFORMATION_KIOSK: (-1, 0, 0)
 RIDE_TYPE_FOOD_STALL: (-1, 0, 0)
@@ -42,7 +42,7 @@ RIDE_TYPE_LAUNCHED_FREEFALL: (379, 879, 543)
 RIDE_TYPE_BOAT_HIRE: (269, 89, 100)
 RIDE_TYPE_MOTION_SIMULATOR: (290, 350, 300)
 RIDE_TYPE_DRINK_STALL: (-1, 0, 0)
-RIDE_TYPE_CHAIRLIFT: (289, 55, 51)
+RIDE_TYPE_CHAIRLIFT: (287, 55, 51)
 RIDE_TYPE_GO_KARTS: (509, 288, 45)
 RIDE_TYPE_INFORMATION_KIOSK: (-1, 0, 0)
 RIDE_TYPE_FOOD_STALL: (-1, 0, 0)
@@ -86,30 +86,30 @@ RIDE_TYPE_SHOP: (-1, 0, 0)
 RIDE_TYPE_SHOP: (-1, 0, 0)
 RIDE_TYPE_FIRST_AID: (-1, 0, 0)
 RIDE_TYPE_CASH_MACHINE: (-1, 0, 0)
-RIDE_TYPE_MULTI_DIMENSION_ROLLER_COASTER: (696, 833, 772)
+RIDE_TYPE_MULTI_DIMENSION_ROLLER_COASTER: (694, 833, 772)
 RIDE_TYPE_SIDE_FRICTION_ROLLER_COASTER: (486, 586, 338)
 RIDE_TYPE_REVERSER_ROLLER_COASTER: (548, 525, 387)
-RIDE_TYPE_INVERTED_HAIRPIN_COASTER: (668, 770, 470)
+RIDE_TYPE_INVERTED_HAIRPIN_COASTER: (670, 770, 470)
 RIDE_TYPE_VIRGINIA_REEL: (531, 542, 588)
 RIDE_TYPE_STEEL_WILD_MOUSE: (631, 768, 473)
-RIDE_TYPE_MINI_ROLLER_COASTER: (541, 563, 397)
-RIDE_TYPE_SPIRAL_ROLLER_COASTER: (613, 373, 215)
+RIDE_TYPE_MINI_ROLLER_COASTER: (539, 563, 397)
+RIDE_TYPE_SPIRAL_ROLLER_COASTER: (620, 373, 215)
 RIDE_TYPE_LOOPING_ROLLER_COASTER: (467, 441, 182)
-RIDE_TYPE_STAND_UP_ROLLER_COASTER: (548, 790, 558)
+RIDE_TYPE_STAND_UP_ROLLER_COASTER: (553, 790, 558)
 RIDE_TYPE_LIM_LAUNCHED_ROLLER_COASTER: (680, 944, 573)
 RIDE_TYPE_TWISTER_ROLLER_COASTER: (778, 769, 425)
 RIDE_TYPE_GIGA_COASTER: (624, 359, 200)
-RIDE_TYPE_INVERTED_ROLLER_COASTER: (676, 850, 686)
+RIDE_TYPE_INVERTED_ROLLER_COASTER: (678, 850, 686)
 RIDE_TYPE_INVERTED_IMPULSE_COASTER: (643, 750, 569)
 RIDE_TYPE_MINI_SUSPENDED_COASTER: (512, 696, 475)
 RIDE_TYPE_MINE_RIDE: (644, 458, 381)
-RIDE_TYPE_HEARTLINE_TWISTER_COASTER: (315, 658, 462)
+RIDE_TYPE_HEARTLINE_TWISTER_COASTER: (314, 658, 462)
 RIDE_TYPE_LAY_DOWN_ROLLER_COASTER: (682, 666, 548)
 RIDE_TYPE_FLYING_ROLLER_COASTER: (719, 711, 678)
 RIDE_TYPE_REVERSE_FREEFALL_COASTER: (518, 747, 534)
-RIDE_TYPE_VERTICAL_DROP_ROLLER_COASTER: (641, 618, 282)
+RIDE_TYPE_VERTICAL_DROP_ROLLER_COASTER: (639, 618, 282)
 RIDE_TYPE_AIR_POWERED_VERTICAL_COASTER: (873, 895, 701)
-RIDE_TYPE_SUSPENDED_MONORAIL: (338, 47, 23)
+RIDE_TYPE_SUSPENDED_MONORAIL: (336, 47, 23)
 RIDE_TYPE_LIFT: (563, 35, 102)
 RIDE_TYPE_MONORAIL_CYCLES: (226, 29, 1)
 RIDE_TYPE_FERRIS_WHEEL: (85, 50, 55)
@@ -128,7 +128,7 @@ RIDE_TYPE_RIVER_RAPIDS: (376, 153, 90)
 RIDE_TYPE_RIVER_RAFTS: (263, 45, 43)
 RIDE_TYPE_DINGHY_SLIDE: (477, 577, 358)
 RIDE_TYPE_MINI_HELICOPTERS: (315, 50, 4)
-RIDE_TYPE_SUSPENDED_SWINGING_COASTER: (692, 691, 720)
-RIDE_TYPE_COMPACT_INVERTED_COASTER: (679, 830, 698)
+RIDE_TYPE_SUSPENDED_SWINGING_COASTER: (690, 691, 720)
+RIDE_TYPE_COMPACT_INVERTED_COASTER: (680, 830, 698)
 RIDE_TYPE_SPLASH_BOATS: (474, 204, 113)
 RIDE_TYPE_SUBMARINE_RIDE: (255, 180, 140)
